# CRNet

./: .env.example  .gitignore  README_CRNet.md  pyproject.toml
HST/: Download_and_Extract.ipynb  HST_Train.py  LACosmic_Testing.ipynb
HST/ACS-WFC-AttBN-16/: ACS-WFC-AttBN-16.pth  F435W_EX_ACS-WFC-AttBN-16.npy  F435W_GAL_ACS-WFC-AttBN-16.npy  F435W_GC_ACS-WFC-AttBN-16.npy  F606W_EX_ACS-WFC-AttBN-16.npy  F606W_GAL_ACS-WFC-AttBN-16.npy  F606W_GC_ACS-WFC-AttBN-16.npy  F814W_EX_ACS-WFC-AttBN-16.npy  F814W_GAL_ACS-WFC-AttBN-16.npy  F814W_GC_ACS-WFC-AttBN-16.npy  events.out.tfevents.1769354177.node2088.palmetto.clemson.edu.3132673.0  val_loss.npy
HST/ACS-WFC-AttGN-16/: ACS-WFC-AttGN-16.pth  F435W_EX_ACS-WFC-AttGN-16.npy  F435W_GAL_ACS-WFC-AttGN-16.npy  F435W_GC_ACS-WFC-AttGN-16.npy  F606W_EX_ACS-WFC-AttGN-16.npy  F606W_GAL_ACS-WFC-AttGN-16.npy  F606W_GC_ACS-WFC-AttGN-16.npy  F814W_EX_ACS-WFC-AttGN-16.npy  F814W_GAL_ACS-WFC-AttGN-16.npy  F814W_GC_ACS-WFC-AttGN-16.npy  events.out.tfevents.1769354151.node2088.palmetto.clemson.edu.3132104.0  val_loss.npy
HST/ACS-WFC-BN-16/: F435W_EX_ACS-WFC-BN-16.npy  F435W_GAL_ACS-WFC-BN-16.npy  F435W_GC_ACS-WFC-BN-16.npy  F606W_EX_ACS-WFC-BN-16.npy  F606W_GAL_ACS-WFC-BN-16.npy  F606W_GC_ACS-WFC-BN-16.npy  F814W_EX_ACS-WFC-BN-16.npy  F814W_GAL_ACS-WFC-BN-16.npy  F814W_GC_ACS-WFC-BN-16.npy  events.out.tfevents.1769352736.node2087.palmetto.clemson.edu.2845758.0  val_loss.npy
src/CRNet/: __init__.py  (+6 more)
test/: evaluate.py  test_dataset1.py  test_model.py  test_model1.py  test_train.py  test_util.py
webapp/: README.md  app.py  requirements.txt
(+30 files in other folders)
