[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CRNet"
version = "0.1.0"
description = "Deep learning framework for cosmic ray detection in astronomical images"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Srinadh Reddy Bhavanam" }
]

dependencies = [
  "numpy",
  "torch",
  "tqdm",
  "matplotlib",
  "joblib",
  "astropy",
  "astroscrappy",
  "scikit-image",
]

[project.optional-dependencies]
web = [
  "flask>=3.0",
  "gunicorn>=21.2",
  "Pillow>=10.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

#[tool.setuptools.package-data]
#CRNet = ["*.pth", "*.json"]